--- a/assets/2020-01-18/zoogle/zoogle/contribs/templates/base.html
+++ b/assets/2020-01-18/zoogle/zoogle/contribs/templates/base.html
@@ -11,15 +11,21 @@
     </head>
     <body>
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-            <a href='/' class="my-0 mr-md-auto lead">Zoogle</a>
+            <a href='/' class="my-0 mr-md-auto lead">Cloud Native Bangalore</a>
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-dark" href="{% url "ssr" %}">SSR</a>
                 <a class="p-2 text-dark" href="{% url "ajax" %}">Ajax</a>
                 <a class="p-2 text-dark" href="{% url "search" %}">Search</a>
             </nav>
         </div>
-        {% block content %}
-        <h1>CONTENT</h1>
-        {% endblock content %}
+        <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Zoogle</h1>
+            <p class="lead">OpenTelemetry + Jaeger Demo</p>
+        </div>
+        <div class="container">
+            {% block content %}
+            <h1>CONTENT</h1>
+            {% endblock content %}
+        </div>
     </body>
 </html>
