--- a/assets/2020-01-18/zoogle/zoogle/contribs/templates/index.html
+++ b/assets/2020-01-18/zoogle/zoogle/contribs/templates/index.html
@@ -1,12 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Cloud Native Bangalore</h1>
-    <p class="lead">
-        OpenTelemetry + Jaeger Demo
-    </p>
-</div>
-<div class="container">
     <div class="card-deck mb-3 text-center">
         <div class="card mb-4 box-shadow">
             <div class="card-body">
@@ -19,7 +12,7 @@
         <div class="card mb-4 box-shadow">
             <div class="card-body">
                 <h1 class="card-title">
-                    Render with Ajax endpoints
+                    Render with Ajax + gRPC
                 </h1>
                 <a href="{% url "ajax" %}" type="button" class="btn btn-lg btn-block btn-outline-primary">Ajax</a>
             </div>
@@ -33,5 +26,4 @@
             </div>
         </div>
     </div>
-</div>
 {% endblock content %}
