--- a/assets/2020-01-18/zoogle/zoogle/contribs/templates/ssr.html
+++ b/assets/2020-01-18/zoogle/zoogle/contribs/templates/ssr.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Zmails</h1>
+<h1>SSR</h1>
+<hr />
+<h2>Zmails</h2>
 <table class="table table-striped">
     <thead>
         <tr>
@@ -22,7 +24,7 @@
     </tbody>
 </table>
 <hr />
-<h1>Zdocs</h1>
+<h2>Zdocs</h2>
 <table class="table table-striped">
     <thead>
         <tr>
