--- a/assets/2020-01-18/zoogle/contribs/templates/ajax.html
+++ b/assets/2020-01-18/zoogle/contribs/templates/ajax.html
@@ -29,6 +29,55 @@
     <tbody id="zdocs">
     </tbody>
 </table>
+<hr />
+<pre>
+
+Casual Relationship:
+
+ +----------+                +----------+
+ |          |                |          |
+ | Traefik  +--------------->+  Zoogle  |
+ |          |                |          |
+ +----------+                +----------+
+
+ +----------+                +----------+                +----------+
+ |          |                |          |                |          |
+ | Traefik  +--------------->+  Zoogle  +--------------->+  Zmail   |
+ |          |                |          |                |          |
+ +----------+                +----------+                +----------+
+
+ +----------+                +----------+                +----------+
+ |          |                |          |                |          |
+ | Traefik  +--------------->+  Zoogle  +--------------->+  Zdocs   |
+ |          |                |          |                |          |
+ +----------+                +----------+                +----------+
+
+
+
+
+Temporal Relationship:
+
++------------------------------------------------------------------------------------------>
+
+    +------------------------+  +------------------------+   +------------------------+
+    |                        |  |                        |   |                        |
+    |    Traefik             |  |      Traefik           |   |       Traefik          |
+    |                        |  |                        |   |                        |
+    +------------------------+  +------------------------+   +------------------------+
+
+       +-----------------+         +-----------------+          +-----------------+
+       |                 |         |                 |          |                 |
+       |   Zoogle        |         |       Zoogle    |          |       Zoogle    |
+       |                 |         |                 |          |                 |
+       +-----------------+         +-----------------+          +-----------------+
+
+                                     +-------------+              +-------------+
+                                     |             |              |             |
+                                     |   Zmail     |              |   Zdocs     |
+                                     |             |              |             |
+                                     +-------------+              +-------------+
+
+</pre>
 <script charset="utf-8" type="text/javascript">
     fetch('/zmail')
         .then((response) => {
