--- a/assets/2020-01-18/zoogle/contribs/templates/search.html
+++ b/assets/2020-01-18/zoogle/contribs/templates/search.html
@@ -25,4 +25,46 @@
         {% endfor %}
     </tbody>
 </table>
+<hr />
+<pre>
+
+Casual Relationship:
+                                                             +------------+
+                                                             |            |
+                                  +------------------------->+  Zmail     |
+                                  |                          |            |
+ +----------+                +----+-----+                    +------------+
+ |          |                |          |
+ | Traefik  +--------------->+  Zoogle  |
+ |          |                |          |
+ +----------+                +----+-----+                    +------------+
+                                  |                          |            |
+                                  +------------------------->+  Zdocs     |
+                                                             |            |
+                                                             +------------+
+
+
+Temporal Relationship:
+
++----------------------------------------------------------------------------->
+
+    +------------------------------------------------------------------+
+    |                                                                  |
+    |                         Traefik                                  |
+    |                                                                  |
+    +------------------------------------------------------------------+
+
+         +-------------------------------------------------------+
+         |                                                       |
+         |                    Zoogle                             |
+         |                                                       |
+         +-------------------------------------------------------+
+
+              +----------------+      +-----------------+
+              |                |      |                 |
+              |   Zmail        |      |     Zdocs       |
+              |                |      |                 |
+              +----------------+      +-----------------+
+
+</pre>
 {% endblock content %}
