--- a/assets/2020-01-18/zoogle/contribs/templates/ssr.html
+++ b/assets/2020-01-18/zoogle/contribs/templates/ssr.html
@@ -45,4 +45,32 @@
         {% endfor %}
     </tbody>
 </table>
+<hr>
+<pre>
+
+Casual Relationship:
+
+    +----------+                +----------+
+    |          |                |          |
+    | Traefik  +--------------->+  Zoogle  |
+    |          |                |          |
+    +----------+                +----------+
+
+
+Temporal Relationship:
+
+    +---------------------------------------------------------------->
+
+        +---------------------------------------------------+
+        |                                                   |
+        |                Traefik                            |
+        |                                                   |
+        +---------------------------------------------------+
+
+            +---------------------------------------+
+            |                                       |
+            |          Zoogle                       |
+            |                                       |
+            +---------------------------------------+
+</pre>
 {% endblock content %}
